# layerhouse

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  Tiltfile
.github/workflows/: ci.yml  release-artifacts.yml
crates/layerhouse-ctl/: Cargo.toml
crates/layerhouse-ctl/src/: air_gapped.rs  main.rs  registry.rs
crates/layerhouse-server/: Cargo.toml  build.rs
crates/layerhouse-server/dashboard/: index.html
crates/layerhouse-server/src/: config.rs  error.rs  gc.rs  main.rs
deploy/: README.md
deploy/binary/: README.md
deploy/binary/config/: cluster.toml  standalone.toml
deploy/binary/oxmgr/: oxfile.toml
deploy/binary/systemd/: layerhouse.service
deploy/ci/: Dockerfile.runtime
deploy/compose/: Caddyfile  README.md  auth-cluster.yml  cluster.yml  standalone-tls.yml  standalone.yml
deploy/compose/config/: cluster.toml  standalone-oidc.toml  standalone-tls.toml  standalone.toml
deploy/kubernetes/: README.md
docs/mdbook/: book.toml
docs/test-plans/: 01-standalone-mode.md  02-scale-up.md  03-multi-replica-cluster.md  04-dashboard-contract.md  06-mirror-proxy-cache.md  08-production-oci-workflows.md  09-mirror-proxy-production-workflow.md  10-auth-workflows.md  11-air-gapped-k8s-bootstrap.md  README.md
tests/compose/: cluster.yml  standalone.yml
tests/conformance/: run.sh
tests/k8s/: helm-smoke.sh  lib.sh  tilt-failure-smoke.sh  tilt-full-smoke.sh  tilt-recovery-smoke.sh  tilt-scale-smoke.sh
tests/production/: auth-workflow.sh  mirror-proxy-workflow.sh  oci-workflow.sh  run-all.sh
tests/release/: dry-run.sh
(+108 files in other folders)
