[package]
name = "layerhouse-ctl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "layerhouse-ctl"
path = "src/main.rs"

[package.metadata.dist]
dist = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
clap = { workspace = true, features = ["derive"] }
aioduct.workspace = true
http.workspace = true
bytes.workspace = true
futures.workspace = true
base64.workspace = true
rcgen.workspace = true
time.workspace = true
